==> redstonee/FMT-Firmware/target/redstonee_tek/ch32_fmu/drivers/drv_usart.c <==
#include <firmament.h>
#include "drv_usart.h"
#include "hal/serial/serial.h"
#define SET_BIT(REG, BIT)   ((REG) |= (BIT))
#define CLEAR_BIT(REG, BIT) ((REG) &= ~(BIT))
#define READ_BIT(REG, BIT)  ((REG) & (BIT))
#define UART_ENABLE_IRQ(n)  NVIC_EnableIRQ((n))
#define UART_DISABLE_IRQ(n) NVIC_DisableIRQ((n))
#define USING_UART2
#define USING_UART3
#define USING_UART4
#define USING_UART5
#define USING_UART6
#define SERIAL3_DEFAULT_CONFIG                 \
    {                                          \
        BAUD_RATE_115200, /* 115200 bits/s */  \
        DATA_BITS_8,      /* 8 databits */     \
        STOP_BITS_1,      /* 1 stopbit */      \
        PARITY_NONE,      /* No parity  */     \
        BIT_ORDER_LSB,    /* LSB first sent */ \
        NRZ_NORMAL,       /* Normal mode */    \
        SERIAL_RB_BUFSZ,  /* Buffer size */    \
        0                                      \
    }

static void _dma_tx_config(struct ch32_uart* uart)
{
    DMA_Channel_TypeDef* dma_channel = _dma_mux_channel_to_channel[uart->dma.tx_mux_ch];

    /* enable dma tx interrupt */
    nvic_irq_enable(uart->dma.tx_irq, 0, 1);

    DMA_DeInit(dma_channel);
    DMA_InitTypeDef dma_init_struct = {
        .DMA_PeripheralBaseAddr = (uint32_t)(uart->uart_periph->DATAR),
        .DMA_Memory0BaseAddr = 0, /* will be configured later */
        .DMA_DIR = DMA_DIR_PeripheralDST,
        .DMA_BufferSize = 0, /* will be configured later */
        .DMA_PeripheralInc = DMA_PeripheralInc_Disable,
        .DMA_MemoryInc = DMA_MemoryInc_Enable,
        .DMA_PeripheralDataSize = DMA_PeripheralDataSize_Byte,
        .DMA_MemoryDataSize = DMA_PeripheralDataSize_Byte,
        .DMA_Mode = DMA_Mode_Normal,
        .DMA_Priority = DMA_Priority_VeryHigh,
        .DMA_M2M = DMA_M2M_Disable
    };
    DMA_Init(dma_channel, &dma_init_struct);

    DMA_MuxChannelConfig(uart->dma.tx_mux_ch, uart->dma.tx_req_num);
    DMA_Cmd(dma_channel, ENABLE);
    /* USART DMA enable for transmission */
    USART_DMACmd(uart->uart_periph, USART_DMAReq_Tx, ENABLE);
}

static void _dma_rx_config(struct ch32_uart* uart, rt_uint8_t* buf, rt_size_t size)
{
    DMA_Channel_TypeDef* dma_channel = _dma_mux_channel_to_channel[uart->dma.rx_mux_ch];

    /* set expected receive length */
    uart->dma.setting_recv_len = size;

    nvic_irq_enable(uart->dma.rx_irq, 0, 0);
    /* Enable USART IDLE interrupt, which is used by DMA rx */
    USART_ITConfig(uart->uart_periph, USART_IT_IDLE, ENABLE);

    DMA_DeInit(dma_channel);
    DMA_InitTypeDef dma_init_struct = {
        .DMA_PeripheralBaseAddr = (uint32_t)(&uart->uart_periph->DATAR),
        .DMA_Memory0BaseAddr = (uint32_t)buf, /* will be configured later */
        .DMA_DIR = DMA_DIR_PeripheralSRC,
        .DMA_BufferSize = size, /* will be configured later */
        .DMA_PeripheralInc = DMA_PeripheralInc_Disable,
        .DMA_MemoryInc = DMA_MemoryInc_Enable,
        .DMA_PeripheralDataSize = DMA_PeripheralDataSize_Byte,
        .DMA_MemoryDataSize = DMA_PeripheralDataSize_Byte,
        .DMA_Mode = DMA_Mode_Normal,
        .DMA_Priority = DMA_Priority_VeryHigh,
        .DMA_M2M = DMA_M2M_Disable
    };
    DMA_Init(dma_channel, &dma_init_struct);

    /* enable DMA channel transfer complete interrupt */
    DMA_ITConfig(dma_channel, DMA_IT_TC, ENABLE);
    /* enable DMA channel */
    DMA_MuxChannelConfig(uart->dma.rx_mux_ch, uart->dma.rx_req_num);
    DMA_Cmd(dma_channel, ENABLE);
    /* USART DMA enable for reception */
    USART_DMACmd(uart->uart_periph, USART_DMAReq_Rx, ENABLE);
}

static void _close_usart(struct serial_device* serial)
{
    struct ch32_uart* uart = (struct ch32_uart*)serial->parent.user_data;
    DMA_Channel_TypeDef* dma_channel = _dma_mux_channel_to_channel[uart->dma.rx_mux_ch];

    if (serial->parent.open_flag & RT_DEVICE_FLAG_INT_RX) {
        /* disable rx irq */
        USART_ITConfig(uart->uart_periph, USART_IT_RXNE, DISABLE);
    }

    if (serial->parent.open_flag & RT_DEVICE_FLAG_DMA_RX) {
        /* disable DMA channel transfer complete interrupt */
        DMA_ITConfig(dma_channel, DMA_IT_TC, DISABLE);
        /* disable rx idle interrupt */
        USART_ITConfig(uart->uart_periph, USART_IT_IDLE, DISABLE);
        /* disable DMA channel */
        DMA_Cmd(dma_channel, DISABLE);
        /* USART DMA disable for reception */
        USART_DMACmd(uart->uart_periph, USART_DMAReq_Rx, DISABLE);
    }

    if (serial->parent.open_flag & RT_DEVICE_FLAG_DMA_TX) {
        /* disable DMA channel transfer complete interrupt */
        DMA_ITConfig(dma_channel, DMA_IT_TC, DISABLE);
        /* disable DMA channel */
        DMA_Cmd(dma_channel, DISABLE);
        /* USART DMA disable for transmission */
        USART_DMACmd(uart->uart_periph, USART_DMAReq_Tx, DISABLE);
    }
    /* reset last recv index */
    uart->dma.last_recv_index = 0;
}

static void ch32_uart_gpio_init(struct ch32_uart* uart)
{
    /* enable USART clock */
    RCC_HBPeriphClockCmd(uart->tx_gpio_clk, ENABLE);
    RCC_HBPeriphClockCmd(uart->rx_gpio_clk, ENABLE);
    RCC_HBPeriphClockCmd(uart->per_clk, ENABLE);
    if (uart->dma.clock == RCC_HBPeriph_DMA1 || uart->dma.clock == RCC_HBPeriph_DMA2) {
        /* enable DMA1 clock */
        RCC_HBPeriphClockCmd(uart->dma.clock, ENABLE);
    }

    GPIO_PinAFConfig(uart->tx_port, _gpio_pin_to_source(uart->tx_pin), uart->tx_af);
    GPIO_PinAFConfig(uart->rx_port, _gpio_pin_to_source(uart->rx_pin), uart->rx_af);

    GPIO_InitTypeDef GPIO_InitStruct = {
        .GPIO_Pin = uart->tx_pin,
        .GPIO_Speed = GPIO_Speed_Very_High,
        .GPIO_Mode = GPIO_Mode_AF_PP,
    };

    GPIO_Init(uart->tx_port, &GPIO_InitStruct);

    GPIO_InitStruct.GPIO_Pin = uart->rx_pin;
    GPIO_InitStruct.GPIO_Mode = GPIO_Mode_IN_FLOATING;
    GPIO_Init(uart->rx_port, &GPIO_InitStruct);

    NVIC_SetPriority(uart->irqn, 0);
    NVIC_EnableIRQ(uart->irqn);
}

static rt_err_t usart_configure(struct serial_device* serial, struct serial_configure* cfg)
{
    struct ch32_uart* uart;

    RT_ASSERT(serial != RT_NULL);
    RT_ASSERT(cfg != RT_NULL);

    uart = (struct ch32_uart*)serial->parent.user_data;

    ch32_uart_gpio_init(uart);

    USART_InitTypeDef USART_InitStruct = {
        .USART_BaudRate = cfg->baud_rate,
        .USART_WordLength = (cfg->data_bits == DATA_BITS_9) ? USART_WordLength_9b : USART_WordLength_8b,
        .USART_StopBits = (cfg->stop_bits == STOP_BITS_2) ? USART_StopBits_2 : USART_StopBits_1,
        .USART_HardwareFlowControl = USART_HardwareFlowControl_None,
        .USART_Mode = USART_Mode_Rx | USART_Mode_Tx,
    };

    switch (cfg->parity) {
    case PARITY_ODD:
        USART_InitStruct.USART_Parity = USART_Parity_Odd;
        break;
    case PARITY_EVEN:
        USART_InitStruct.USART_Parity = USART_Parity_Even;
        break;
    default:
        USART_InitStruct.USART_Parity = USART_Parity_No;
        break;
    }

    USART_Init(uart->uart_periph, &USART_InitStruct);
    USART_Cmd(uart->uart_periph, ENABLE);
    return RT_EOK;
}

static rt_err_t usart_control(struct serial_device* serial, int cmd, void* arg)
{
    struct ch32_uart* uart;
    rt_uint32_t ctrl_arg = (rt_uint32_t)(arg);

    RT_ASSERT(serial != RT_NULL);
    uart = (struct ch32_uart*)serial->parent.user_data;

    switch (cmd) {
    case RT_DEVICE_CTRL_CLR_INT:
        if (ctrl_arg == RT_DEVICE_FLAG_INT_RX) {
            /* disable rx irq */
            NVIC_DisableIRQ(uart->irqn);
            /* disable interrupt */
            USART_ITConfig(uart->uart_periph, USART_IT_RXNE, DISABLE);
        }
        break;

    case RT_DEVICE_CTRL_SET_INT:
        if (ctrl_arg == RT_DEVICE_FLAG_INT_RX) {
            /* enable rx irq */
            NVIC_EnableIRQ(uart->irqn);
            /* enable interrupt */
            USART_ITConfig(uart->uart_periph, USART_IT_RXNE, ENABLE);
        }
        break;

        /* USART DMA config */
    case RT_DEVICE_CTRL_CONFIG:
        if (ctrl_arg == RT_DEVICE_FLAG_DMA_RX) {
            struct serial_rx_fifo* rx_fifo = (struct serial_rx_fifo*)serial->serial_rx;
            struct ch32_uart* uart = (struct ch32_uart*)serial->parent.user_data;

            if (READ_BIT(DMA_CHCTL(uart->dma.dma_periph, uart->dma.rx_ch), BIT(0))) {
                return RT_EBUSY;
            }

            _dma_rx_config(uart, rx_fifo->buffer, serial->config.bufsz);
        }

        if (ctrl_arg == RT_DEVICE_FLAG_DMA_TX) {
            struct ch32_uart* uart = (struct ch32_uart*)serial->parent.user_data;

            if (READ_BIT(DMA_CHCTL(uart->dma.dma_periph, uart->dma.tx_ch), 0)) {
                return RT_EBUSY;
            }

            _dma_tx_config(uart);
        }
        break;

    case RT_DEVICE_CTRL_SUSPEND:
        _close_usart(serial);
        break;

    default:
        break;
    }

    return RT_EOK;
}

static int usart_putc(struct serial_device* serial, char ch)
{
    struct ch32_uart* uart;

    RT_ASSERT(serial != RT_NULL);
    uart = (struct ch32_uart*)serial->parent.user_data;

    usart_data_transmit(uart->uart_periph, ch);

    /* wait transmit finish */

    while (!USART_GetFlagStatus(uart->uart_periph, USART_FLAG_TC))
        ;

    return RT_EOK;
}

static int usart_getc(struct serial_device* serial)
{
    int ch = -1;
    struct ch32_uart* uart;

    RT_ASSERT(serial != RT_NULL);
    uart = (struct ch32_uart*)serial->parent.user_data;

    if (USART_GetFlagStatus(uart->uart_periph, USART_FLAG_RXNE))
        ch = usart_data_receive(uart->uart_periph);

    return ch;
}

rt_err_t drv_usart_init(void)
{
    rt_err_t rt_err = RT_EOK;
    struct serial_configure config = SERIAL_DEFAULT_CONFIG;

#ifdef USING_UART2
    serial2.ops = &__usart_ops;
    #ifdef SERIAL2_DEFAULT_CONFIG
    struct serial_configure serial2_config = SERIAL2_DEFAULT_CONFIG;
    serial2.config = serial2_config;
    #else
    serial2.config = config;
    #endif

    /* register serial device */
    rt_err |= hal_serial_register(&serial2,
                                  "serial2",
                                  RT_DEVICE_FLAG_RDWR | RT_DEVICE_FLAG_STANDALONE | RT_DEVICE_FLAG_INT_RX | RT_DEVICE_FLAG_DMA_RX | RT_DEVICE_FLAG_DMA_TX,
                                  &uart2);
#endif /* USING_UART2 */

#ifdef USING_UART3
    serial3.ops = &__usart_ops;
    #ifdef SERIAL3_DEFAULT_CONFIG
    struct serial_configure serial3_config = SERIAL3_DEFAULT_CONFIG;
    serial3.config = serial3_config;
    #else
    serial3.config = config;
    #endif

    /* register serial device */
    rt_err |= hal_serial_register(&serial3,
                                  "serial3  ",
                                  RT_DEVICE_FLAG_RDWR | RT_DEVICE_FLAG_STANDALONE | RT_DEVICE_FLAG_INT_RX | RT_DEVICE_FLAG_DMA_RX | RT_DEVICE_FLAG_DMA_TX,
                                  &uart3);
#endif /* USING_UART2 */

#ifdef USING_UART4
    serial4.ops = &__usart_ops;
    #ifdef SERIAL4_DEFAULT_CONFIG
    struct serial_configure serial4_config = SERIAL4_DEFAULT_CONFIG;
    serial4.config = serial4_config;
    #else
    serial4.config = config;
    #endif

    /* register serial device */
    rt_err |= hal_serial_register(&serial4,
                                  "serial4",
                                  RT_DEVICE_FLAG_RDWR | RT_DEVICE_FLAG_STANDALONE | RT_DEVICE_FLAG_INT_RX | RT_DEVICE_FLAG_DMA_RX | RT_DEVICE_FLAG_DMA_TX,
                                  &uart4);
#endif /* USING_UART4 */

#ifdef USING_UART5
    serial5.ops = &__usart_ops;
    #ifdef SERIAL5_DEFAULT_CONFIG
    struct serial_configure serial5_config = SERIAL5_DEFAULT_CONFIG;
    serial5.config = serial5_config;
    #else
    serial5.config = config;
    #endif

    /* register serial device */
    rt_err |= hal_serial_register(&serial5,
                                  "serial5",
                                  RT_DEVICE_FLAG_RDWR | RT_DEVICE_FLAG_STANDALONE | RT_DEVICE_FLAG_INT_RX,
                                  &uart5);
#endif /* USING_UART5 */

    return rt_err;
}
